# InitAdventures

./: CHECK-LIST.md  README.md  main.py  pyproject.toml
pacote/: __init__.py
pacote/sub_pacote/: __init__.py  modulo.py
